2005-11-17  Jacob Smullyan  <smulloni@smullyan.org>

	* tests/test_base.py (test_one_to_many3): test for 1-2->1 bug.

	* src/pydo/base.py (PyDO._update_raw): use new has_sane_rowcount
	flag.  This fixes berlios bug #5521.
	(ForeignKey.getMany): fix for passing a sql string (various typos
	and thinkos) reported by Jonan Santiago, much thanks.

	* src/pydo/drivers/mysqlconn.py: set has_sane_rowcount to False.

	* src/pydo/dbi.py (has_sane_rowcount): new flag for driver
	classes, indicating whether we ought to take rowcount seriously or
	not. 

	* tests/test_base.py (test_update2): excluding mysql from this
	test, which mysql can't run successfully without failing another
	test. 

2005-10-12  Jacob Smullyan  <smulloni@smullyan.org>

	* tests/test_operators.py (test_pickle1), tests/test_fields.py
	(test_pickle1): tests for pickling. 

	* src/pydo/operators.py, src/pydo/fields.py: define __getstate__
	and __setstate__ for objects with slots.

	* setup.py: now use setuptools.

2005-10-07  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/multifetch.py (iterfetch): fixed silly error that
	prevented pyformat or named style parameter passing from working.

2005-09-19  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/base.py (ForeignKey, ManyToMany, OneToMany): using
	modified string_to_obj, no longer specify frame number.

	* src/pydo/utils.py (string_to_obj): now walks stack frames.

2005-09-09  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/dbi.py (getConnection): added optional argument,
	"create", defaulting to True, so that it is possible to call
	getConnection(alias, 0) and get None if there is no connection
	around, which you might want sometimes.

	* src/pydo/operators.py (_repr_between): fix for BETWEEN operator.

2005-09-06  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/__init__.py (__version__): upping to 2.0b2.

	* src/pydo/base.py (PyDO._new): for postgresql's sake, now call
	dbi.getSequence with the schema-qualified table name.
